--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
             <artifactId>google-api-services-sheets</artifactId>
             <version>v4-rev493-1.23.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-exec</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
