--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.33</version>
+        </dependency>
 
 
         <!--     Google API        -->
@@ -144,6 +149,7 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
 
